# mlops-learning

./: .gitignore  dockerfile  mlflow.db  mlflow_1.py  pyproject.toml  requirement.txt  save_model.py  serve.py
.dvc/: config
.github/workflows/: ml-pipeline.yml
data/: iris_data.csv.dvc
tests/: test_model.py
