[project]
name = "mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.67.1",
    "httpx>=0.28.1",
    "mlflow>=3.12.0",
    "pytest>=9.0.3",
    "scikit-learn>=1.8.0",
]

[tool.uv.workspace]
members = [
    "dvc",
]
